@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-02-25T01:11:58Z",
-  "count_outdated" : 1772,
-  "uniques_outdated" : 1013,
-  "count" : 1788,
-  "uniques" : 1029,
+  "timestamp" : "2025-02-27T01:11:47Z",
+  "count_outdated" : 1775,
+  "uniques_outdated" : 1016,
+  "count" : 1789,
+  "uniques" : 1030,
   "clones" : [
-    {
-      "timestamp": "2025-02-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
-      "timestamp": "2025-02-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-14T00:00:00Z",
       "count": 1,
@@ -106,6 +88,15 @@
     },
     {
       "timestamp": "2025-02-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
