@@ -1,17 +1,7 @@
 {
-  "count": 16,
-  "uniques": 6,
+  "count": 14,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-02-12T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-02-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-14T00:00:00Z",
       "count": 1,
@@ -59,6 +49,11 @@
     },
     {
       "timestamp": "2025-02-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
